[gd_scene load_steps=13 format=3 uid="uid://b3hif652o2nud"]

[ext_resource type="Script" uid="uid://dpai1avhs42yy" path="res://Core/status_bar.gd" id="1_ha1x3"]
[ext_resource type="Script" uid="uid://c816en3tciw3a" path="res://Core/command_bar.gd" id="2_5yh6k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2yge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bvp3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lquwl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dm0k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_7dm0k"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5yh6k"]
font_color = Color(0.8150196, 3.5857408e-06, 7.70092e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ig7tw"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7dm0k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig7tw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xm2m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.003921569, 0, 0.02745098, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Editor" type="CodeEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1bvp3")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_lquwl")
indent_automatic = true

[node name="StatusBar" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7dm0k")
script = ExtResource("1_ha1x3")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/StatusBar"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatusBar/MarginContainer"]
layout_mode = 2

[node name="CurrentFileLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "D:/GodotProjects/keyboard_text_editor/main.gd"
label_settings = SubResource("LabelSettings_7dm0k")
text_overrun_behavior = 3

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_5yh6k")
text_overrun_behavior = 3

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CaretPosLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ln 1 / 1: Col 1"
label_settings = SubResource("LabelSettings_ig7tw")
horizontal_alignment = 2

[node name="CommandBar" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_7dm0k")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_ig7tw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xm2m")
script = ExtResource("2_5yh6k")

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/CommandBar" to="MarginContainer/VBoxContainer/CommandBar" method="_on_command_submitted"]
